// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetails should renders correctly 1`] = `
<DocumentFragment>
  <div
    class="preview"
    style="background-image: url(/src/Assets/pictures/cover-image.jpg); filter: blur(5px);"
  />
  <div
    class="previewContent"
  >
    <div
      class="buttons"
    >
      <div
        class="logo"
      >
        <a
          class="logo"
          href="/"
        >
          <b>
            netflix
          </b>
          roulette
        </a>
      </div>
      <div
        class="info"
      >
        <img
          alt="poster"
          src="https://image.tmdb.org/t/p/w500/ldoY4fTZkGISMidNw60GHoNdgP8.jpg"
        />
        <div
          class="infoMovie"
        >
          <div
            class="titleWithRating"
          >
            <h1>
              Guardians of the Galaxy Vol. 3
            </h1>
            <div
              class="circle"
            >
              10
            </div>
          </div>
          <p>
            <span>
              2020
            </span>
            <span>
              100 min
            </span>
          </p>
          <p
            class="overview"
          >
            The third film based on Marvel's Guardians of the Galaxy.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails should renders correctly without film 1`] = `
<DocumentFragment>
  <div
    class="preview"
    style="background-image: url(/src/Assets/pictures/cover-image.jpg); filter: blur(5px);"
  />
  <div
    class="previewContent"
  >
    <div
      class="buttons"
    >
      <div
        class="logo"
      >
        <a
          class="logo"
          href="/"
        >
          <b>
            netflix
          </b>
          roulette
        </a>
      </div>
      <div
        class="info"
      >
        <img
          alt="poster"
          src="[object Object]"
        />
        <div
          class="infoMovie"
        >
          <div
            class="titleWithRating"
          >
            <h1 />
          </div>
          <p>
            <span />
            <span />
          </p>
          <p
            class="overview"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
